--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,6 @@ edition = "2021"
 
 [dependencies]
 clap = "4.5.3"
-lazy_static = "1.4"
 fibonacci = { path = "fibonacci" }
 primes = { path = "primes" }
+once_cell = "1.20.2"
