--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,7 @@ clap = "4.5.3"
 fibonacci = { path = "fibonacci" }
 primes = { path = "primes" }
 once_cell = "1.20.2"
+ratatui = { version = "0.29.0", features = ["all-widgets"] }
+crossterm = "0.28.1"
+serde = { version = "1.0.214", features = ["derive"] }
+serde_json = "1.0.132"
